Misc adjustments & improvements
- Add script to ShortcutWindow
- Root analysis script: display cells
- FIx decimals in prompt
- Fix reset of L&F
- Fix inconsistency in viewers API
- Misc